--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
 
   <div id="containerDad">
     <div id="containerSon">
-      <img src="./public/image-1.gif" alt="kitten" id="img-1">
+      <img src="./public/images/image-1.gif" alt="kitten" id="img-1">
       <h1 id="text">Quieres ser mi novia?</h1>
       <button id="yes-button">
         Si
